--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,12 @@
-cmake_minimum_required(VERSION 3.24)
+cmake_minimum_required(VERSION 3.27)
 project(Graph)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 23)
 
-add_executable(Graph main.cpp graph.hpp graph.h)
+# Указываем исходные файлы вашей библиотеки
+set(SOURCES
+    graph.h
+    graph.hpp
+)
+
+
