--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,12 +3,13 @@ project(Graph)
 
 set(CMAKE_CXX_STANDARD 23)
 
-# Указываем исходные файлы вашей библиотеки
+# Указываем путь к заголовочным файлам вашего репозитория
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+
+# Добавляем все исходные файлы в список SOURCES
 set(SOURCES
     graph.hpp
 )
 
 # Создаем статическую библиотеку
 add_library(Graph STATIC ${SOURCES})
-
-
