--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,7 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.24)
 project(Graph)
 
-# Укажите стандарт C++.
 set(CMAKE_CXX_STANDARD 17)
 
-# Создайте библиотеку вместо исполняемого файла.
-# Используйте 'SHARED' для динамической библиотеки или 'STATIC' для статической.
-add_library(Graph STATIC graph.cpp graph.h)
-
+add_executable(Graph main.cpp graph.hpp graph.h)
 
